tooling/tree-sitter-plum/test/corpus/assign.txt
================================================================================
assign - Int
================================================================================

val startYear = 2101
val a = +123
val b = -111
val c = 456
val d = 0xcafe
// val e = 0b001

--------------------------------------------------------------------------------

(source
  (assign
    (identifier)
    (expression
      (primary_expression
        (integer))))
  (assign
    (identifier)
    (expression
      (primary_expression
        (unary_operator
          (primary_expression
            (integer))))))
  (assign
    (identifier)
    (expression
      (primary_expression
        (unary_operator
          (primary_expression
            (integer))))))
  (assign
    (identifier)
    (expression
      (primary_expression
        (integer))))
  (assign
    (identifier)
    (expression
      (primary_expression
        (integer))))
  (comment))

================================================================================
assign - Float
================================================================================

val pi = 3.14159
val a = +1.2
val b = -0.4
val c = 12.0f
val d = 15.03f
// val e = (1 + 2).mod(3).pow(2).sqrt()

--------------------------------------------------------------------------------

(source
  (assign
    (identifier)
    (expression
      (primary_expression
        (float))))
  (assign
    (identifier)
    (expression
      (primary_expression
        (unary_operator
          (primary_expression
            (float))))))
  (assign
    (identifier)
    (expression
      (primary_expression
        (unary_operator
          (primary_expression
            (float))))))
  (assign
    (identifier)
    (expression
      (primary_expression
        (float))))
  (assign
    (identifier)
    (expression
      (primary_expression
        (float))))
  (comment))

================================================================================
assign - String
================================================================================

val name = "kestrel"
val a = strOf("123")

--------------------------------------------------------------------------------

(source
  (assign
    (identifier)
    (expression
      (primary_expression
        (string
          (quoted_content)))))
  (assign
    (identifier)
    (expression
      (primary_expression
        (call
          (reference
            (identifier))
          (argument_list
            (expression
              (primary_expression
                (string
                  (quoted_content))))))))))

================================================================================
assign - Type
================================================================================

val debugEnabled = True
val a = True
val b = False
val c = nil

--------------------------------------------------------------------------------

(source
  (assign
    (identifier)
    (expression
      (primary_expression
        (typename))))
  (assign
    (identifier)
    (expression
      (primary_expression
        (typename))))
  (assign
    (identifier)
    (expression
      (primary_expression
        (typename))))
  (assign
    (identifier)
    (expression
      (primary_expression
        (identifier)))))

================================================================================
assign - Call
================================================================================

val count = counter(10)

--------------------------------------------------------------------------------

(source
  (assign
    (identifier)
    (expression
      (primary_expression
        (call
          (reference
            (identifier))
          (argument_list
            (expression
              (primary_expression
                (integer)))))))))

================================================================================
assign - Expression
================================================================================

val sum = 1 + ((2 * 3) / 4)

--------------------------------------------------------------------------------

(source
  (assign
    (identifier)
    (expression
      (primary_expression
        (binary_operator
          (primary_expression
            (integer))
          (primary_expression
            (parenthesized_expression
              (expression
                (primary_expression
                  (binary_operator
                    (primary_expression
                      (parenthesized_expression
                        (expression
                          (primary_expression
                            (binary_operator
                              (primary_expression
                                (integer))
                              (primary_expression
                                (integer)))))))
                    (primary_expression
                      (integer))))))))))))

================================================================================
assign - Not
================================================================================

val enabled = !False

--------------------------------------------------------------------------------

(source
  (assign
    (identifier)
    (expression
      (not_operator
        (expression
          (primary_expression
            (typename)))))))

================================================================================
assign - Boolean expression
================================================================================

val open = (count > 10) && (enabled == True) || (debug == False)

--------------------------------------------------------------------------------

(source
  (assign
    (identifier)
    (expression
      (boolean_operator
        (expression
          (boolean_operator
            (expression
              (primary_expression
                (parenthesized_expression
                  (expression
                    (comparison_operator
                      (primary_expression
                        (identifier))
                      (primary_expression
                        (integer)))))))
            (expression
              (primary_expression
                (parenthesized_expression
                  (expression
                    (comparison_operator
                      (primary_expression
                        (identifier))
                      (primary_expression
                        (typename)))))))))
        (expression
          (primary_expression
            (parenthesized_expression
              (expression
                (comparison_operator
                  (primary_expression
                    (identifier))
                  (primary_expression
                    (typename)))))))))))

================================================================================
assign - Call list
================================================================================

val countriesList = listOf("US", "INDIA", "CANADA")
val a = list.of(1, 2, 3)
val b = list.of(list.of(1), list.of(2), list.of(3))
val c = list.of(1, 2, 3 * 4, 8, n)

--------------------------------------------------------------------------------

(source
  (assign
    (identifier)
    (expression
      (primary_expression
        (call
          (reference
            (identifier))
          (argument_list
            (expression
              (primary_expression
                (string
                  (quoted_content))))
            (expression
              (primary_expression
                (string
                  (quoted_content))))
            (expression
              (primary_expression
                (string
                  (quoted_content)))))))))
  (assign
    (identifier)
    (expression
      (primary_expression
        (call
          (reference
            (identifier)
            (identifier))
          (argument_list
            (expression
              (primary_expression
                (integer)))
            (expression
              (primary_expression
                (integer)))
            (expression
              (primary_expression
                (integer))))))))
  (assign
    (identifier)
    (expression
      (primary_expression
        (call
          (reference
            (identifier)
            (identifier))
          (argument_list
            (expression
              (primary_expression
                (call
                  (reference
                    (identifier)
                    (identifier))
                  (argument_list
                    (expression
                      (primary_expression
                        (integer)))))))
            (expression
              (primary_expression
                (call
                  (reference
                    (identifier)
                    (identifier))
                  (argument_list
                    (expression
                      (primary_expression
                        (integer)))))))
            (expression
              (primary_expression
                (call
                  (reference
                    (identifier)
                    (identifier))
                  (argument_list
                    (expression
                      (primary_expression
                        (integer))))))))))))
  (assign
    (identifier)
    (expression
      (primary_expression
        (call
          (reference
            (identifier)
            (identifier))
          (argument_list
            (expression
              (primary_expression
                (integer)))
            (expression
              (primary_expression
                (integer)))
            (expression
              (primary_expression
                (binary_operator
                  (primary_expression
                    (integer))
                  (primary_expression
                    (integer)))))
            (expression
              (primary_expression
                (integer)))
            (expression
              (primary_expression
                (identifier)))))))))

================================================================================
assign - Call map
================================================================================

val countryCode = mapOf(
  "in" => "INDIA",
  "us" => "United States",
  "ca" => "Canada"
)
val a = mapOf("a" => 1, "b" => 2)
val b = mapOf("a" => 1, "b" => map.of("c" => 3, "d" => 4))

--------------------------------------------------------------------------------

(source
  (assign
    (identifier)
    (expression
      (primary_expression
        (call
          (reference
            (identifier))
          (argument_list
            (pair_argument
              (string
                (quoted_content))
              (expression
                (primary_expression
                  (string
                    (quoted_content)))))
            (pair_argument
              (string
                (quoted_content))
              (expression
                (primary_expression
                  (string
                    (quoted_content)))))
            (pair_argument
              (string
                (quoted_content))
              (expression
                (primary_expression
                  (string
                    (quoted_content))))))))))
  (assign
    (identifier)
    (expression
      (primary_expression
        (call
          (reference
            (identifier))
          (argument_list
            (pair_argument
              (string
                (quoted_content))
              (expression
                (primary_expression
                  (integer))))
            (pair_argument
              (string
                (quoted_content))
              (expression
                (primary_expression
                  (integer)))))))))
  (assign
    (identifier)
    (expression
      (primary_expression
        (call
          (reference
            (identifier))
          (argument_list
            (pair_argument
              (string
                (quoted_content))
              (expression
                (primary_expression
                  (integer))))
            (pair_argument
              (string
                (quoted_content))
              (expression
                (primary_expression
                  (call
                    (reference
                      (identifier)
                      (identifier))
                    (argument_list
                      (pair_argument
                        (string
                          (quoted_content))
                        (expression
                          (primary_expression
                            (integer))))
                      (pair_argument
                        (string
                          (quoted_content))
                        (expression
                          (primary_expression
                            (integer)))))))))))))))
