tooling/tree-sitter-plum/test/corpus/enum.txt
================================================================================
enum
================================================================================

Bool =
  | True
  | False

--------------------------------------------------------------------------------

(source
  (enum
    (type_identifier)
    (enum_field
      (type_identifier))
    (enum_field
      (type_identifier))))
