tooling/tree-sitter-plum/test/corpus/if.txt
================================================================================
if
================================================================================

main() =
  if a < b
    printLn("a is less than b")
  else if a > 9
    printLn(a == 9)
  else if a > 18
    printLn(b == 0)
  else
    if a > 5
      printLn(a)
    else
      printLn("None")

--------------------------------------------------------------------------------

(source
  (fn
    (fn_identifier)
    (body
      (if
        (expression
          (comparison_operator
            (primary_expression
              (identifier))
            (primary_expression
              (identifier))))
        (body
          (primary_expression
            (fn_call
              (identifier)
              (argument_list
                (expression
                  (primary_expression
                    (string
                      (string_start)
                      (string_content)
                      (string_end))))))))
        (else_if
          (expression
            (comparison_operator
              (primary_expression
                (identifier))
              (primary_expression
                (integer))))
          (body
            (primary_expression
              (fn_call
                (identifier)
                (argument_list
                  (expression
                    (comparison_operator
                      (primary_expression
                        (identifier))
                      (primary_expression
                        (integer)))))))))
        (else_if
          (expression
            (comparison_operator
              (primary_expression
                (identifier))
              (primary_expression
                (integer))))
          (body
            (primary_expression
              (fn_call
                (identifier)
                (argument_list
                  (expression
                    (comparison_operator
                      (primary_expression
                        (identifier))
                      (primary_expression
                        (integer)))))))))
        (else
          (body
            (if
              (expression
                (comparison_operator
                  (primary_expression
                    (identifier))
                  (primary_expression
                    (integer))))
              (body
                (primary_expression
                  (fn_call
                    (identifier)
                    (argument_list
                      (expression
                        (primary_expression
                          (identifier)))))))
              (else
                (body
                  (primary_expression
                    (fn_call
                      (identifier)
                      (argument_list
                        (expression
                          (primary_expression
                            (string
                              (string_start)
                              (string_content)
                              (string_end))))))))))))))))
